# OrbSim

./: .gitignore  0.8.1  2.0.12  README.md  orbsim_gui.bat  pyproject.toml  requirements.txt
src/orbsim/: __init__.py  app.py  audio.py  colorbar_widget.py  molecule.py  orbitals.py  resources.py  widgets.py
src/orbsim/chem/: aufbau.py  compound_db.py  electron_configuration.py  elements.py  formula_format.py  formula_parser.py
src/orbsim/content/: __init__.py  compound_properties.py  electron_shells_text.py  family_overview.py
src/orbsim/dialogs/: chemical_nomenclature_dialog.py  compound_database_dialog.py  compound_details_dialog.py
src/orbsim/nomenclature/: __init__.py  phase_names.json  practice_pool.json  tutorial_content.json
src/orbsim/pedagogy/: __init__.py  compounds.json  elements.json
src/orbsim/tabs/: __init__.py  atomic_orbitals_tab.py  bonding_orbitals_tab.py  compound_builder_tab.py  electron_shells_tab.py  periodic_table_tab.py  shared.py
src/orbsim/theming/: __init__.py  apply_theme.py  theme_manager.py  theme_tokens.py
src/orbsim/ui/: __init__.py  expandable_text.py  main_window.ui  resources.qrc
src/orbsim/views/: __init__.py  annotation_editor.py  clipping_controller.py  electron_shells_view.py  main_window.py  periodic_table_view.py  slicing_controller.py
tests/: test_formula_format.py  test_formula_parser.py
themes/minecraft_classic/: theme.json  widgets.qss
tools/: build_compound_db.py  build_ui.py  pyside6_deploy.md  seed_compounds.csv  seed_curriculum_core.csv  seed_curriculum_extended.csv  seed_top_popular.csv
(+7 files in other folders)
