[project]
name = "orbsim"
version = "0.1.0"
description = "Interactive atomic and molecular orbital simulation and visualization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OrbSim Contributors"}]
dependencies = [
  "numpy",
  "pyvista",
  "pyvistaqt",
  "pyside6",
  "vtk",
  "periodic-table-cli==2.1.3",
  "cmcrameri>=1.7",
  "pint>=0.24",
  "qtawesome>=1.3.0",
]

[project.scripts]
orbsim = "orbsim.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
orbsim = ["assets/icons/*.svg", "themes/**"]
